--- a/ini/i3_mega.ini
+++ b/ini/i3_mega.ini
@@ -112,7 +112,7 @@ platform          = atmelavr
 board             = megaatmega2560
 board_build.f_cpu = 16000000L
 lib_deps          = ${common.lib_deps}
-  TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
+  #TMC26XStepper=https://github.com/trinamic/TMC26XStepper/archive/master.zip
 src_filter        = ${common.default_src_filter} +<src/HAL/AVR>
 build_flags       = ${common.build_flags} -DMOTHERBOARD=BOARD_TRIGORILLA_14 -DKNUTWURST_MEGA -DKNUTWURST_TMC -DKNUTWURST_BLTOUCH
 build_unflags     = -DKNUTWURST_MEGA_S -DKNUTWURST_MEGA_X -DKNUTWURST_MEGA_P -DKNUTWURST_DGUS2_TFT -DKNUTWURST_ONE_Z_ENDSTOP -DKNUTWURST_CHIRON -DKNUTWURST_4MAXP2 
