--- a/platformio.ini
+++ b/platformio.ini
@@ -15,64 +15,64 @@ src_dir       = Marlin
 boards_dir    = buildroot/share/PlatformIO/boards
 extra_configs = ini/i3_mega.ini
 default_envs =
-  MEGA_1G
-  MEGA_1G_TMC
-  MEGA_1G_BLT_10
-  MEGA_1G_BLT_11
-  MEGA_1G_TMC_BLT_10
-  MEGA_1G_TMC_BLT_11
-  MEGA
-  MEGA_TMC
-  MEGA_BLT_10
-  MEGA_BLT_11
+#  MEGA_1G
+#  MEGA_1G_TMC
+#  MEGA_1G_BLT_10
+#  MEGA_1G_BLT_11
+#  MEGA_1G_TMC_BLT_10
+#  MEGA_1G_TMC_BLT_11
+#  MEGA
+#  MEGA_TMC
+#  MEGA_BLT_10
+#  MEGA_BLT_11
   MEGA_TMC_BLT_10
-  MEGA_TMC_BLT_11
-  MEGA_S
-  MEGA_S_TMC
-  MEGA_S_BLT_10
-  MEGA_S_BLT_11
-  MEGA_S_TMC_BLT_10
-  MEGA_S_TMC_BLT_11
-  MEGA_S_DGUS
-  MEGA_S_DGUS_TMC
-  MEGA_S_DGUS_BLT_10
-  MEGA_S_DGUS_BLT_11
-  MEGA_S_DGUS_TMC_BLT_10
-  MEGA_S_DGUS_TMC_BLT_11
-  MEGA_X
-  MEGA_X_TMC
-  MEGA_X_BLT_10
-  MEGA_X_BLT_11
-  MEGA_X_TMC_BLT_10
-  MEGA_X_TMC_BLT_11
-  MEGA_X_DGUS
-  MEGA_X_DGUS_TMC
-  MEGA_X_DGUS_BLT_10
-  MEGA_X_DGUS_BLT_11
-  MEGA_X_DGUS_TMC_BLT_10
-  MEGA_X_DGUS_TMC_BLT_11
-  MEGA_P_DGUS
-  MEGA_P_DGUS_TMC
-  MEGA_P_DGUS_BLT_10
-  MEGA_P_DGUS_BLT_11
-  MEGA_P_DGUS_TMC_BLT_10
-  MEGA_P_DGUS_TMC_BLT_11
-  CHIRON
-  CHIRON_TMC
-  CHIRON_DGUS
-  CHIRON_DGUS_TMC
-  4MAXP2
-  4MAXP2_TMC
-  4MAXP2_BLT_10
-  4MAXP2_BLT_11
-  4MAXP2_TMC_BLT_10
-  4MAXP2_TMC_BLT_11
-  4MAXP2_DGUS
-  4MAXP2_DGUS_TMC
-  4MAXP2_DGUS_BLT_10
-  4MAXP2_DGUS_BLT_11
-  4MAXP2_DGUS_TMC_BLT_10
-  4MAXP2_DGUS_TMC_BLT_11
+#  MEGA_TMC_BLT_11
+#  MEGA_S
+#  MEGA_S_TMC
+#  MEGA_S_BLT_10
+#  MEGA_S_BLT_11
+#  MEGA_S_TMC_BLT_10
+#  MEGA_S_TMC_BLT_11
+#  MEGA_S_DGUS
+#  MEGA_S_DGUS_TMC
+#  MEGA_S_DGUS_BLT_10
+#  MEGA_S_DGUS_BLT_11
+#  MEGA_S_DGUS_TMC_BLT_10
+#  MEGA_S_DGUS_TMC_BLT_11
+#  MEGA_X
+#  MEGA_X_TMC
+#  MEGA_X_BLT_10
+#  MEGA_X_BLT_11
+#  MEGA_X_TMC_BLT_10
+#  MEGA_X_TMC_BLT_11
+#  MEGA_X_DGUS
+#  MEGA_X_DGUS_TMC
+#  MEGA_X_DGUS_BLT_10
+#  MEGA_X_DGUS_BLT_11
+#  MEGA_X_DGUS_TMC_BLT_10
+#  MEGA_X_DGUS_TMC_BLT_11
+#  MEGA_P_DGUS
+#  MEGA_P_DGUS_TMC
+#  MEGA_P_DGUS_BLT_10
+#  MEGA_P_DGUS_BLT_11
+#  MEGA_P_DGUS_TMC_BLT_10
+#  MEGA_P_DGUS_TMC_BLT_11
+#  CHIRON
+#  CHIRON_TMC
+#  CHIRON_DGUS
+#  CHIRON_DGUS_TMC
+#  4MAXP2
+#  4MAXP2_TMC
+#  4MAXP2_BLT_10
+#  4MAXP2_BLT_11
+#  4MAXP2_TMC_BLT_10
+#  4MAXP2_TMC_BLT_11
+#  4MAXP2_DGUS
+#  4MAXP2_DGUS_TMC
+#  4MAXP2_DGUS_BLT_10
+#  4MAXP2_DGUS_BLT_11
+#  4MAXP2_DGUS_TMC_BLT_10
+#  4MAXP2_DGUS_TMC_BLT_11
 
 
 #
@@ -289,7 +289,7 @@ default_src_filter = +<src/*> -<src/config> -<src/HAL> +<src/HAL/shared>
   -<src/libs/L64XX> -<src/module/stepper/L64xx.cpp> -<src/HAL/shared/HAL_spi_L6470.cpp>
   -<src/libs/MAX31865.cpp>
   -<src/libs/hex_print.cpp>
-  -<src/libs/least_squares_fit.cpp>
+#  -<src/libs/least_squares_fit.cpp>
 #  -<src/libs/nozzle.cpp> -<src/gcode/feature/clean>
 #  -<src/module/delta.cpp>
 #  -<src/module/planner_bezier.cpp>
