--- a/ini/i3_mega.ini
+++ b/ini/i3_mega.ini
@@ -430,8 +430,8 @@ board             = megaatmega2560
 board_build.f_cpu = 16000000L
 lib_deps          = ${common.lib_deps}
 build_src_filter  = ${common.default_src_filter} +<src/HAL/AVR>
-build_flags       = ${common.build_flags} -DMOTHERBOARD=BOARD_TRIGORILLA_CHIRON -DKNUTWURST_CHIRON -DKNUTWURST_TMC
-build_unflags     = -DKNUTWURST_MEGA -DKNUTWURST_MEGA_S -DKNUTWURST_MEGA_X -DKNUTWURST_MEGA_P -DKNUTWURST_DGUS2_TFT -DKNUTWURST_BLTOUCH -DKNUTWURST_ONE_Z_ENDSTOP -DKNUTWURST_4MAXP2 
+build_flags       = ${common.build_flags} -DMOTHERBOARD=BOARD_TRIGORILLA_CHIRON -DKNUTWURST_CHIRON -DKNUTWURST_TMC -DKNUTWURST_BLTOUCH
+build_unflags     = -DKNUTWURST_MEGA -DKNUTWURST_MEGA_S -DKNUTWURST_MEGA_X -DKNUTWURST_MEGA_P -DKNUTWURST_DGUS2_TFT -DKNUTWURST_ONE_Z_ENDSTOP -DKNUTWURST_4MAXP2 
 
 
 #
